added email password - it needs the email code inserted
added change password -needs the links from other pages and the actual
code to change the password

--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -17,17 +17,18 @@
   {% endif %}
 {% endwith %}
 
-
+    <h1>Change your password</h1>
 	  <form class="pure-form pure-form-stacked" method="POST">
 	    <fieldset>
 	    <legend>Log in </legend>
-	    <input type="email" placeholder="Email" name="email">
 	    <input type="text" placeholder="Password" name="password">
-	    <button type="submit" name="button" value="Sign in" class="pure-button pure-button-primary">
-	      Sign in
+	    <input type="text" placeholder="New Password" name="npassword1">
+	    <input type="text" placeholder="Confirm New Password" name="npassword2">
+	    <button type="submit" name="button" value="Change" class="pure-button pure-button-primary">
+	      Change
 	    </button>
-	    <button type="submit" name="button" value="register" class="pure-button pure-button-primary">
-	      Register
+	    <button type="submit" name="button" value="Cancel" class="pure-button pure-button-primary">
+	      Cancel
 	    </button>
 	    <button type="submit" name="button" value="forgot" class="pure-button pure-button-primary">
 	      Forgot password
