--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -18,19 +18,16 @@
 {% endwith %}
 
 
+    <h1> Enter your email address and we'll send you your password </h1>
 	  <form class="pure-form pure-form-stacked" method="POST">
 	    <fieldset>
-	    <legend>Log in </legend>
+	    <legend>Email </legend>
 	    <input type="email" placeholder="Email" name="email">
-	    <input type="text" placeholder="Password" name="password">
 	    <button type="submit" name="button" value="Sign in" class="pure-button pure-button-primary">
-	      Sign in
+	      Send
 	    </button>
-	    <button type="submit" name="button" value="register" class="pure-button pure-button-primary">
-	      Register
-	    </button>
-	    <button type="submit" name="button" value="forgot" class="pure-button pure-button-primary">
-	      Forgot password
+	    <button type="submit" name="button" value="home" class="pure-button pure-button-primary">
+	      home
 	    </button>
 	    </fieldset>
 	  </form>
