--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
         <div class="pure-u-2-3">
 {% with messages = get_flashed_messages() %}
   {% if messages %}
+<h3>STATUS</h3>
     <ul class=flashes>
     {% for message in messages %}
       <li>{{ message }}</li>
