--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
 	    <fieldset>
 	    <legend>Log in </legend>
 	    <input type="email" placeholder="Email" name="email">
-	    <input type="text" placeholder="Password" name="password">
+	    <input type="password" placeholder="Password" name="password">
 	    <button type="submit" name="button" value="Sign in" class="pure-button pure-button-primary">
 	      Sign in
 	    </button>
