--- a/templates/register.html
+++ b/templates/register.html
@@ -22,8 +22,8 @@
 	    <legend>Register </legend>
 	    <input type="email" placeholder="Email" name="email">
 	    Your password is just to help identify your application. IT IS NOT SECURE. Don't use any of your real passwords.
-	    <input type="text" placeholder="Password" name="password">
-	    <input type="text" placeholder="Retype Password" name="cpassword">
+	    <input type="password" placeholder="Password" name="password">
+	    <input type="password" placeholder="Retype Password" name="cpassword">
 	    <button type="submit" name="button" value="Create" class="pure-button pure-button-primary">
 	      Create account
 	    </button>
