--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a responsive product landing page.">
 
-    <title>CSTUY Internship Application</title>
+    <title>CSTUY SHIP 2014 Application</title>
 
     
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+<style>
+ .logo {
+   display:inline-block;
+   vertical-align:bottom;
+   height:35px;}
+ .blue { color: rgb(22, 132, 179); }
+
+</style>
 </head>
+
 
 <body>
 
@@ -17,7 +26,7 @@
 <div class="pure-u">
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="">CSTUY</a>
+        <a class="pure-menu-heading" href=""><img class="logo" src="/applications/logo.png"></a>
 
         <ul>
             <li class="pure-menu-selected"><a href="#">Home</a></li>
@@ -26,6 +35,15 @@
     </div>
 </div>
 </div>
+</div>
+
+<div class="pure-g">
+  <div class="pure-u-1-6">
+  </div>
+  <div class="pure-u-5-6">
+    <br><br><br>
+    <h2 class="blue">SHIP Application</h2>
+  </div>
 </div>
 
 
